--- a/src/App.scss
+++ b/src/App.scss
@@ -7,18 +7,29 @@
     margin: 0;
 }
 
-body {
+html {
     font-family: 'Poppins', sans-serif;
-    ;
 }
+
+.header-container {
+    background-color: gray;
+    padding-bottom: 0.1em;
+}
+
 .navbar-container {
     display: flex;
     align-items: center;
     margin: 0 auto;
-    background-color: white;
-    width: 90%;
+    width: 90vw;
     gap: 1.5em;
     padding-top: 3em;
+    font-weight: 700;
+}
+
+.navbar-container:nth-child(1),
+.cta-container:nth-child(1) {
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .navbar-links {
@@ -39,7 +50,14 @@ body {
     padding: 0.1em 0.7em;
 }
 
-.cta-container .cta-message-container button {
+.form-container button {
+    padding: 0.5em 1.5em;
+    border-radius: 0.5em;
+    white-space: nowrap;
+}
+
+.cta-container .cta-message-container button,
+.secondary-cta-container button {
     border-radius: 2em;
     padding: 0.5em 1em;
 }
@@ -50,7 +68,9 @@ body {
 }
 
 .navbar-login :nth-child(2),
-.cta-container .cta-message-container button {
+.cta-container .cta-message-container button,
+.secondary-cta-container button,
+.form-container button {
     background-color: #2BD0D0;
     color: #FFFFFF;
 }
@@ -61,14 +81,17 @@ body {
 }
 
 .navbar-login :nth-child(2):hover,
-.cta-container .cta-message-container button:hover {
+.cta-container .cta-message-container button:hover,
+.secondary-cta-container button:hover {
     opacity: 0.5;
 }
 
 .cta-container {
     display: flex;
-    max-width: 90%;
+    width: 90vw;
     margin: 5em auto;
+    min-height: 460px;
+    min-width: 900px;
 }
 
 .cta-image-container,
@@ -76,7 +99,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     width: 50vw;
 }
 
@@ -89,21 +112,107 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1em;
-    gap: 1em;
-    width: 90%;
 }
 
 .message-container-control h1 {
     color: #34313D;
     font-family: 'Poppins', sans-serif;
-    font-size: 3em;
+    font-size: 3.5em;
     font-weight: 700;
-    line-height: 2em;
+    line-height: 1.3em;
 }
-.message-container-control p{
+
+.message-container-control p {
     color: #9E9AA8;
+    line-height: 2em;
 }
 
 .cta-image-container img {
     height: 90%;
+}
+
+// main-container
+.form-container {
+    // position: absolute;
+    // transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+    height: 11vh;
+    background-color: #3A3054;
+    border-radius: 0.5em;
+    margin: 0 auto;
+}
+
+input {
+    padding: 0.4em 25em 0.4em 1em;
+    border-radius: 0.5em;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+
+// position the text in place holder to the start 
+input[type="text"]::placeholder {
+    // text-align: left;
+    opacity: 0.5;
+    font-weight: 500;
+}
+
+.statistic-container {
+    margin-top: 8em;
+    text-align: center;
+}
+
+.statistic-container h3 {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.statistic-container p {
+    color: #9E9AA8;
+    font-weight: 500;
+}
+
+.secondary-cta-container {
+    text-align: center;
+    background-color: #4B3F6B;
+    color: #FFF;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.secondary-cta-container h3 {
+    margin-bottom: 2em;
+}
+.feature-wrapper {
+    display: flex;
+    margin: 5em auto;
+    width: 90vw;
+    height: 40vh;
+}
+
+.feature-container {
+    flex: 1;
+    margin: 10px;
+    padding: 4em;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+}
+.feature-title {
+    font-style: normal;
+    font-weight: 700;
+    color: #333;
+    font-size: 1.3em;
+}
+
+.feature-intro {
+    font-size: 1em;
+    line-height: 1.5;
+    color: #9E9AA8;
 }
