--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ html {
 }
 
 .header-container {
+
     padding-bottom: 0.1em;
 }
 
@@ -19,7 +20,8 @@ html {
     display: flex;
     align-items: center;
     margin: 0 auto;
-    width: 90vw;
+    width: 70vw;
+    min-width: 880px;
     gap: 1.5em;
     padding-top: 3em;
     font-weight: 700;
@@ -87,10 +89,10 @@ html {
 
 .cta-container {
     display: flex;
-    width: 90vw;
+    width: 70vw;
     margin: 5em auto;
     min-height: 460px;
-    min-width: 900px;
+    min-width: 880px;
 }
 
 .cta-image-container,
@@ -131,11 +133,12 @@ html {
 }
 
 // main-container
-.page-container{
+.page-container {
     position: relative;
     height: 100vh;
     min-width: 980px;
 }
+
 .form-container {
     position: absolute;
     left: 50%;
@@ -144,7 +147,7 @@ html {
     align-items: center;
     justify-content: center;
     width: 70%;
-    min-width: 900px;
+    min-width: 880px;
     height: 11%;
     background-color: #3A3054;
     border-radius: 0.5em;
@@ -161,6 +164,7 @@ form {
     align-items: center;
     gap: 2em;
 }
+
 input[type="text"]::placeholder {
     opacity: 0.5;
     font-weight: 500;
@@ -192,47 +196,56 @@ input[type="text"]::placeholder {
 .secondary-cta-container h3 {
     margin-bottom: 2em;
 }
+
 .feature-wrapper {
     display: flex;
     justify-content: space-between;
     margin: 5em auto;
-    width: 90vw;
+    width: 70%;
+    min-width: 880px;
     height: 60vh;
     gap: 1em;
 }
-.feature-container{
+
+.feature-container {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
-.icons{
+
+.icons {
     position: absolute;
-    top: -2.2em;
-    left: 1.3em;
+    top: -2.6em;
+    left: 1em;
     background-color: #3A3054;
-    width: 3.5em;
-    height: 3.5em;
+    padding: 0.2em;
     border-radius: 50%;
 }
-.feature-container.two{
+
+.feature-container.two {
     align-self: center;
 }
-.feature-container.three{
+
+.feature-container.three {
     align-self: end;
 }
-.feature-container{
+
+.feature-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50%;
     width: 26%;
+    min-width: 280px;
     padding: 2em 1.2em 2em 1.2em;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-section{
-   text-align: left;
+
+section {
+    text-align: left;
 }
+
 .feature-title {
     font-style: normal;
     font-weight: 700;
