--- a/src/App.scss
+++ b/src/App.scss
@@ -83,10 +83,10 @@ html {
 
 .navbar-login :nth-child(2):hover,
 .cta-container .cta-message-container button:hover,
+.form-container button:hover,
 .secondary-cta-container button:hover {
-    opacity: 0.5;
+    background-color: #9AE3E3;
 }
-
 .cta-container {
     display: flex;
     width: 70vw;
@@ -149,6 +149,9 @@ html {
     width: 70%;
     min-width: 880px;
     height: 11%;
+    background-image: url('./assets/images/bg-shorten-desktop.svg');
+    background-size: cover;
+    background-repeat:no-repeat;
     background-color: #3A3054;
     border-radius: 0.5em;
 }
@@ -283,6 +286,58 @@ section {
     align-items: center;
     gap: 1.5em;
     height: 20vh;
-    background-color: #4B3F6B;
+    background-image: url(./assets/images/bg-boost-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #3A3054;
     color: #FFF;
+}
+// Footer
+.footer-wrapper{
+    background-color: #232127;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    color: #FFF;
+    width: 70vw;
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+.brand-container{
+    margin-right: auto;
+}
+.page-links{
+    display: flex;
+    gap: 7em;
+}
+.page-link{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.page-link h3{
+    margin-bottom: 1em;
+    font-weight: 700;
+    font-size: 1em;
+} 
+.page-link a {
+    color: #BFBFBF;
+    font-size: 0.9em;
+}
+.social-icon-container img:hover{
+    background-color: #2BD0D0;
+    cursor: pointer;
+}
+.page-link a:hover{
+    color: #2BD0D0;
+    cursor: pointer;
+}
+.social-icon-container{
+    display: flex; 
+    gap: 1.5em; 
+    padding-left: 10em;
 }
