Create a responsive hamburger menu icon

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 $font-stack: 'Poppins', sans-serif;
 $button-color: #2BD0D0;
 $container-width: 70vw;
+$button-hover-color: #9AE3E3;
 
 * {
     padding: 0;
@@ -15,6 +16,7 @@ html {
     font-family: $font-stack;
 }
 
+// Header styles
 .header-container {
     padding-bottom: 0.1em;
 }
@@ -30,36 +32,59 @@ html {
     font-weight: 700;
 }
 
-.navbar-container:nth-child(1),
-.cta-container:nth-child(1) {
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
 .navbar-links {
-    display: flex;
     align-items: center;
     gap: 1em;
     margin-right: auto;
+
+    a {
+        color: #9E9AA8;
+
+        &:hover {
+            color: #34313D;
+        }
+    }
 }
 
 .navbar-login {
-    display: flex;
     align-items: center;
     gap: 1em;
-}
 
-.navbar-login {
     button {
         border-radius: 2em;
         padding: 0.1em 0.7em;
     }
 }
 
-.form-container button {
-    padding: 0.5em 1.5em;
-    border-radius: 0.5em;
-    white-space: nowrap;
+// Hamburger Menu
+.show-menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: white;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #3A3054;
+    color: white;
+}
+
+.hide-menu {
+    display: none;
+}
+
+.form-container {
+    button {
+        padding: 0.5em 1.5em;
+        border-radius: 0.5em;
+        white-space: nowrap;
+    }
+
 }
 
 .cta-container .cta-message-container button,
@@ -68,9 +93,14 @@ html {
     padding: 0.5em 1em;
 }
 
-.navbar-container .navbar-links a,
+.navbar-container,
 .navbar-login :nth-child(1) {
     color: #9E9AA8;
+
+    &:hover {
+        color: #34313D;
+
+    }
 }
 
 .navbar-login :nth-child(2),
@@ -79,19 +109,24 @@ html {
 .form-container button {
     background-color: $button-color;
     color: #FFFFFF;
+
+    &:hover {
+        background-color: $button-hover-color;
+    }
 }
 
-.navbar-container .navbar-links a:hover,
-.navbar-login :nth-child(1):hover {
-    color: #34313D;
+
+li {
+    &:last-child {
+        button {
+            background-color: $button-color;
+            color: #FFFFFF;
+            padding: 0.5em 3em;
+            border-radius: 2em;
+        }
+    }
 }
 
-.navbar-login :nth-child(2):hover,
-.cta-container .cta-message-container button:hover,
-.form-container button:hover,
-.secondary-cta-container button:hover {
-    background-color: #9AE3E3;
-}
 
 .cta-container {
     display: flex;
@@ -108,11 +143,17 @@ html {
     justify-content: center;
     align-items: flex-end;
     width: 50vw;
-}
 
-.cta-message-container {
-    align-items: flex-start !important;
-    gap: 1em;
+    &.cta-image-container {
+        img {
+            height: 90%;
+        }
+    }
+
+    &.cta-message-container {
+        align-items: flex-start;
+        gap: 1em;
+    }
 }
 
 .message-container-control {
@@ -127,18 +168,10 @@ html {
         font-weight: 700;
         line-height: 1.3em;
     }
-}
 
-.message-container-control {
     p {
         color: #9E9AA8;
         line-height: 2em;
-    }
-}
-
-.cta-image-container {
-    img {
-        height: 90%;
     }
 }
 
@@ -243,9 +276,7 @@ form {
     padding: 2em 1.2em 2em 1.2em;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #FFFFFF;
-}
 
-.feature-container {
     &:nth-child(2) {
 
         &::before,
@@ -267,18 +298,7 @@ form {
             right: 100%;
         }
     }
-}
 
-.icons {
-    position: absolute;
-    top: -2.3em;
-    left: 1em;
-    background-color: #3A3054;
-    padding: 0.6em;
-    border-radius: 50%;
-}
-
-.feature-container {
     &.one {
         margin-top: 6em;
     }
@@ -290,6 +310,15 @@ form {
     &.three {
         margin-top: 11em;
     }
+}
+
+.icons {
+    position: absolute;
+    top: -2.3em;
+    left: 1em;
+    background-color: #3A3054;
+    padding: 0.6em;
+    border-radius: 50%;
 }
 
 section {
@@ -311,14 +340,6 @@ section {
 }
 
 .secondary-cta-container {
-    h3 {
-        font-size: 1.5em;
-        font-weight: 700;
-        letter-spacing: -0.05em;
-    }
-}
-
-.secondary-cta-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -330,6 +351,12 @@ section {
     background-size: cover;
     background-color: #3A3054;
     color: #FFF;
+
+    h3 {
+        font-size: 1.5em;
+        font-weight: 700;
+        letter-spacing: -0.05em;
+    }
 }
 
 // Footer
@@ -354,38 +381,41 @@ section {
 .page-links {
     display: flex;
     gap: 7em;
-}
 
-.page-link {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
+    .page-link {
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
 
-.page-link {
-    h3 {
-        margin-bottom: 1em;
-        font-weight: 700;
-        font-size: 1em;
+        h3 {
+            margin-bottom: 1em;
+            font-weight: 700;
+            font-size: 1em;
+        }
+
+        a {
+            color: #BFBFBF;
+            font-size: 0.9em;
+
+            &:hover {
+                color: #2BD0D0;
+                cursor: pointer;
+            }
+        }
     }
 
-    a {
-        color: #BFBFBF;
-        font-size: 0.9em;
-    }
-}
-
-.social-icon-container img:hover {
-    filter: sepia(100%) saturate(6585%) hue-rotate(125deg);
-    cursor: pointer;
-}
-
-.page-link a:hover {
-    color: #2BD0D0;
-    cursor: pointer;
 }
 
 .social-icon-container {
     display: flex;
     gap: 1.5em;
+
+    a {
+        img {
+            &:hover {
+                filter: sepia(100%) saturate(6585%) hue-rotate(125deg);
+                cursor: pointer;
+            }
+        }
+    }
 }
