Set up short links display & their constrains

--- a/src/App.scss
+++ b/src/App.scss
@@ -333,6 +333,7 @@ section {
     background-color: #FFF;
     margin: 0 auto;
     padding: 1em 0 1em 2em;
+    margin-bottom: 1em;
 
     .original-link,
     .short-link {
