--- a/src/App.scss
+++ b/src/App.scss
@@ -58,22 +58,21 @@ html {
 
 // Hamburger Menu
 .show-menu {
-    display: block;
     position: absolute;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
     background: white;
-    z-index: 10;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
     background-color: #3A3054;
     color: white;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: scroll;
+    border-radius: 0.8em;
 }
-
+.mobile-login-container{
+    border-top: 1px solid rgba(158, 154, 168, 0.25);
+}
 .hide-menu {
     display: none;
 }
@@ -108,7 +107,7 @@ html {
 
 
 li {
-    &:last-child {
+    .sign-up {
         button {
             background-color: $button-color;
             color: #FFFFFF;
